@@ -4,6 +4,10 @@ Flusspferd Change Log
 Release 0.9
 -----------
 
+2009-12-04:
+- Add flusspferd::create_on API for creating multiple objects on the same
+  container (#179).
+
 2009-12-03:
 - Improve constructor of native_function_base derived classes to have access
   to the function already in the constructor, not just afterwards, which should
